# b-riders

./: README.rst  pyproject.toml
alembic/: env.py
alembic/versions/: 5475c28d3a0f_initial_version.py  64440b2d9589_initial_tables.py  9adc2889d48a_user.py
b_riders/: api.py  cli.py  databases.py
b_riders/api_v1/: api.py  deps.py
b_riders/api_v1/endpoints/: classification.py  login.py  rides.py
b_riders/commands/: db.py  rides.py  users.py
b_riders/core/: config.py  security.py
b_riders/crud/: __init__.py  base.py  crud_classification.py  crud_ride.py  crud_user.py
b_riders/db/: base.py  session.py
b_riders/helpers/: db.py
b_riders/models/: __init__.py  classification.py  ride.py  user.py
b_riders/schemas/: __init__.py  classification.py  ride.py
tests/: conftest.py  test_api.py  test_b_riders.py
