[tool.poetry]
name = "b-riders"
version = "0.1.0"
description = ""
authors = ["Daniel Santos <daniel.martins@lumedigital.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
databases = {extras = ["sqlite"], version = "^0.3.2"}
uvicorn = "^0.11.5"
typer = "^0.2.1"
alembic = "^1.4.2"
tenacity = "^6.2.0"
pyjwt = "^1.7.1"
passlib = "^1.7.2"
pydantic = {extras = ["email"], version = "^1.5.1"}
bcrypt = "^3.1.7"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
flake8-isort = "^3.0.0"
coverage = "^5.1"
black = "^19.10b0"
pylink = "^0.3.3"
pre-commit = "^2.3.0"
requests = "^2.23.0"

[tool.poetry.scripts]
b_riders = 'b_riders.cli:app'


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
